@@ -1,8 +1,17 @@
 from __future__ import print_function, division
 
 def checkupdates(current_version=None):
+	"""
+	Check for program updates on PyPI
+	
+	If you want to disable this, create a file 
+	I_will_check_for_NWAY_updates_myself_thank_you 
+	in your working directory.
+	"""
 	try:
 		import os
+		if os.path.exists('I_will_check_for_NWAY_updates_myself_thank_you'):
+			return
 		if current_version is None:
 			current_version = open(os.path.join(os.path.abspath(
 				os.path.dirname(__file__)), 'VERSION')).read().strip()
