@@ -1,6 +1,6 @@
 [wheel]
 universal = 1
+
 [aliases]
 test=pytest
-[tool:pytest]
-python_files = nwaylib/*.py
+
